[workspace]
members = [
    ".",
    "state_macros",
]

[package]
name = "agsim"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
state_macros = { path = "state_macros" }
rand = "0.8.5"
rand_distr = "0.4"

[lib]
path = "src/lib.rs"
